--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,15 @@
 <html>
+    <head></head>
+   
+        /* Center the form on the page */
+        <link rel='stylesheet' href="{{ url_for('static',filename='style/style.css') }}">
+        <script type="text/javascript" src="{{ url_for('static',filename='script/script.js') }}"> 
+        </script>
+    
+  
+
+
+</head>
     <body>
         <h2> Html Form </h2>
         <form action="/submit" method='post'>
